[package]
name = "code-engine"
authors = ["Ajay Yadav"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.204", features = ["derive"] }
lapin = "2.3.4"
serde_json = "1.0.120"
axum = "0.7.5"
futures-util = "0.3.30"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
tower-http = { version = "0.5.2", features = ["trace"] }
dotenv = "0.15.0"
mongodb = "3.0.0"
libc = "0.2.155"